--- a/static/scripts/yotsuba-B.css
+++ b/static/scripts/yotsuba-B.css
@@ -1,4 +1,11 @@
-
+.postblock {
+	background-color: #98E;
+	color: #000;
+	font-weight: bold;
+	border: 1px solid #000;
+	padding: 0 5px;
+	font-size: 10pt;
+}
 .right{
     float:right;
 }
