--- a/static/scripts/yotsuba.css
+++ b/static/scripts/yotsuba.css
@@ -1,4 +1,11 @@
-
+.postblock{	
+	background-color: #EA8;
+	color: #800;
+	font-weight: 700;
+	border: 1px solid #800;
+	padding: 0 5px;
+	font-size: 10pt;
+}
 .right{
     float:right;
 }
