--- a/templates/board.html
+++ b/templates/board.html
@@ -62,11 +62,11 @@ set(document.getElementById('theme'),get_theme());
         <h1>/{{board}}/</h1>
         <p1>{{desc}}</p1>
          <center><table>
-<tr id='namerow'><td style='border: 1px solid #000;'>Name</td><td><input type='text' name='name' value='{{anon}}' tabindex='1'></td></tr>
-<tr id='subrow'><td style='border: 1px solid #000;'>Subject</td><td><input name='subject' type='text' tabindex='3'><input type='submit' class='button' value='Post' tabindex='6'></td></tr>
-<tr id='comrow'><td style='border: 1px solid #000;'>Comment</td><td><textarea name='body' id='comtxt' cols='48' rows='4' wrap='soft' tabindex='4'></textarea></td></tr>
-<tr id='uprow'><td style='border: 1px solid #000;'>File</td><td><input id='postFile' type='file' name='file' tabindex='7'><br />
-<tr><td style='border: 1px solid #000;' id='delField'>Password</td><td><input type='password' name='password' size='8' value="{{gen(5)}}" id='postPassword' style='text-align:center;'></td></tr>
+<tr id='namerow'><td class='postblock'>Name</td><td><input type='text' name='name' value='{{anon}}' tabindex='1'></td></tr>
+<tr id='subrow'><td class='postblock'>Subject</td><td><input name='subject' type='text' tabindex='3'><input type='submit' class='button' value='Post' tabindex='6'></td></tr>
+<tr id='comrow'><td class='postblock'>Comment</td><td><textarea name='body' id='comtxt' cols='48' rows='4' wrap='soft' tabindex='4'></textarea></td></tr>
+<tr id='uprow'><td class='postblock'>File</td><td><input id='postFile' type='file' name='file' tabindex='7'><br />
+<tr><td class='postblock' id='delField'>Password</td><td><input type='password' name='password' size='8' value="{{gen(5)}}" id='postPassword' style='text-align:center;'></td></tr>
 </table></form></center>
     </br></br>
       <font size="2">jpeg , jpg , gif , png and webm below the size of <b>4mb</b> is allowed. Read <a href="/rules">Rules</a> before posting </font>
