minor board form fix

--- a/templates/board.html
+++ b/templates/board.html
@@ -60,7 +60,7 @@ set(document.getElementById('theme'),get_theme());
          <body>
           <center>
         <h1>/{{board}}/</h1>
-        <p1>{{desc}}</p1>
+	<p1>{{desc}}</p1></br></br>
          <center><table>
 <tr id='namerow'><td class='postblock'>Name</td><td><input type='text' name='name' value='{{anon}}' tabindex='1'></td></tr>
 <tr id='subrow'><td class='postblock'>Subject</td><td><input name='subject' type='text' tabindex='3'><input type='submit' class='button' value='Post' tabindex='6'></td></tr>
