updated banner size

--- a/templates/board.html
+++ b/templates/board.html
@@ -55,7 +55,7 @@ set(document.getElementById('theme'),get_theme());
 
 <title>/{{board}}/ - RikChan</title>
 <center>{{board_list() | safe}}</center><hr>
-<center></br><img style="width:50%;" src=/_banner/{{random()}}></center><hr>
+<center></br><img style="width:300px;" src=/_banner/{{random()}}></center><hr>
 <form action = "/{{board}}/" method = "post" enctype=multipart/form-data><body>
          <body>
           <center>
