--- a/templates/thread.html
+++ b/templates/thread.html
@@ -54,7 +54,7 @@ set(document.getElementById('theme'),get_theme());
 
 <title>/{{board}}/ - RikChan</title><body>
 <center>{{board_list() | safe}}</center><hr>
-<center></br><img style="width:50%;" src=/_banner/{{random()}}></center><hr>
+<center></br><img style="width:300px;" src=/_banner/{{random()}}></center><hr>
 <form action = "/{{board}}/{{thread_id}}/" method = "post" enctype=multipart/form-data>
          <body>
           <center>
